<resources>
    <string name="app_name">Nutrition Care Process Quiz</string>
    <string name="ncp_one">1. What is the first step of the nutrition care process?</string>
    <string name="ncp_two">2. What is the second step of the nutrition care process?</string>
    <string name="ncp_three">3. What is the third step of the nutrition care process?</string>
    <string name="ncp_four">4. What is the fourth step of the nutrition care process?</string>
    <string name='ncp_five'>5. Which of these are domains of nutrition assessment? (Select all that apply)</string>
    <string name="ncp_six">6. Which of these is a domain of nutrition diagnosis?</string>
    <string name="ncp_seven">7. Which of these is a domain of nutrition intervention?</string>
    <string name="ncp_eight">8. Which of these is a domain of nutrition monitoring and evaluation</string>
    <string name="ncp_nine">9. How is a nutrition diagnosis statement written?</string>
    <string name="ncp_ten">10. What are the two phases of nutrition intervention?</string>
    <string name="nutrition_assessment">Nutrition Assessment</string>
    <string name="nutrition_diagnosis">Nutrition Diagnosis</string>
    <string name="nutrition_intervention">Nutrition Intervention</string>
    <string name="nutrition_monitoring">Nutrition monitoring and evaluation</string>
    <string name="question_five_a">Anthropometry, body composition and functional</string>
    <string name="question_five_b">Intake</string>
    <string name="question_five_c">Nutrition education</string>
    <string name="question_five_d">Biochemical and hematological</string>
    <string name="question_six_a">Body composition and functional</string>
    <string name="question_six_b">Biochemical and hematological</string>
    <string name="question_six_c">Clinical</string>
    <string name="question_six_d">Nutrition counselling</string>
    <string name="question_seven_a">Anthropometric measurement</string>
    <string name="question_seven_b">Behavioural-Environmental</string>
    <string name="question_seven_c">Food and nutrition related history</string>
    <string name="question_seven_d">Food and nutrient delivery</string>
    <string name="question_eight_a">Food/Nutrition-related history outcomes</string>
    <string name="question_eight_b">Intake</string>
    <string name="question_eight_c">Clinical</string>
    <string name="question_eight_d">Nutrition counselling</string>
    <string name="question_nine_a">PIS</string>
    <string name="question_nine_b">PWS</string>
    <string name="question_nine_c">PES</string>
    <string name="question_nine_d">POS</string>
    <string name="question_ten_a">Planning and action</string>
    <string name="question_ten_b">Planning and doing</string>
    <string name="question_ten_c">Planning and recommendation</string>
    <string name="question_ten_d">Planning and implementation</string>
    <string name="submit">Submit quiz</string>
    <string name="quiz_feedback">Quiz summary</string>
    <string name="reset">Reset</string>
    <string name="total_score">total score:</string>
    <string name="score_total">0</string>
    <string name="name">Name</string>
    <string name="type_answer">Type answer</string>
</resources>